# holgol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
client/: holgol.js
include/: basewss.h  common.h  consoleinteraction.h  holgolwss.h
src/: CMakeLists.txt  basewss.cpp  consoleinteraction.cpp  holgolwss.cpp  main.cpp  notes.txt
